# c47

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  cleanjm  meson.build  meson_options.txt  tag2ver.py  uncrustify.cfg  uncrustifyC47  wp43  wp43s.cbp  wp43s_pre_V43.css
DM42 binary/: C43L2_48620.pgm  WP43C.pgm
DM42 binary/C43_47L2/: C43_47L2.pgm
DM42 binary/C43_48b/: C43_48aL2.pgm  C43_48bL1.pgm
DM42 binary/C43_48b/PROGRAMS/: ExponentialCurve.TXT  XEQMINDEX.TXT
DMCP_build/: Makefile  compilDMCP  stm32_program.ld
MacOs binaries/: wp43c  wp43s
PROGRAMS/: AllOp's.txt  Bairsto.txt  ECA.txt  ExponentialCurve.TXT  Fact.txt  FreFp2.txt  FreeF.txt  FreeFp.txt  IBessI.txt  POL.p47  POL.txt  PP.p47  PP.txt
STATE/: untitled.s47
decNumberICU/: decNumber.c
dep/decNumberICU/: decBasic.c  decCommon.c  decDPD.h  decNumberLocal.h  decimal128.c  decimal32.c  decimal64.c
docs/code/: Doxyfile  audio.rst  conf.py  freeList.rst  index.rst
res/: c43.cmd  c43.reg  c43_pre_L2.css  c43_pre_L2B.css  c47.cmd  c47.reg  c47_pre.css  wp43_pre.css
res/PROGRAMS/: 58 Tests.TXT  8888.TXT  Battery usage plot.TXT  Binet Fibonacci Plot.TXT  CUBEs3.TXT  CUBEs42.TXT  CalculatorTest.TXT  Fibonacci Formulas.TXT  Gudermannian.TXT  Mersenne Prime 2203.TXT  Mersenne Prime 2281.TXT  Mersenne Prime 3217.TXT  Plot Formula.TXT  Plot prime times.TXT  Plot random deviations from linear.TXT  Pythagoras Hypotenuse.TXT  Re-Plot.TXT  Sinc Plot.TXT  SincPI Plot.TXT  TRAPZ.TXT  Test plot.TXT  WIP XEQM02.TXT  WIP XEQM03.TXT  XEQMINDEX.TXT
res/artwork/: skin.cfg
res/artwork/standardSkin/: landscapeSkin.cfg  portraitSkin.cfg
res/fonts/: C43_Font changes.txt  C43_sortingOrder_additions.csv  C47_Font changes.txt  Font changes.txt  changes.txt  changes2.txt  sortingOrder.csv  sortingOrder.ods  sortingOrder.xlsx
scripts/: subs1.txt
src/: items.xlsx
src/generateCatalogs/: generateCatalogs.c  meson.build
src/generateConstants/: generateConstants.c  meson.build
src/generateTestPgms/: Programming Samples Template JM.xlsx  generateTestPgms.c  meson.build
src/index spreadsheet/: C43 rev1 key template.xlsx  Copy of Layout_template_automation JM2.xlsx  DM42 key template.xlsx  HELP MNUs.xlsx  KEY Layout_template_automation JM5 (D47 from DR5).xlsx  KEYS Layout automation no links - rjvm_alternative_layouts.xlsx  KEYS Layout automation no links 108_09 - rjvm_alternative_layouts.xlsx  KEYS Layout automation no links 108_09a.xlsx  KEYS Layout automation no links 108_09p.xlsx  KEYS Layout_template_automation JM5 (D47 from DR5) DATA.csv  KEYS Layout_template_automation JM5a Master.xlsx  KEYS Layout_template_automation JM5b_108_08s.xlsx  KEYS_Layout_automation_all_layers_0_108_13_04_01_master.xlsx  KEYS_Layout_automation_all_layers_0_108_13_04_02_master.xlsx  KEYS_Layout_automation_all_layers_0_108_14_00_00_master-updated.xlsx  KEYS_Layout_automation_all_layers_108_13_04.xlsx  KEYS_Layout_automation_no_links_108_09p.xlsx  KEYS_Layout_automation_no_links_108_12_01.xlsx  KEYS_Layout_automation_no_links_108_12_03.xlsx  Layout_template_automation JM3.xlsx  Layout_template_automation JM4.xlsx  UNIT and submenu changes 108_09a.xlsx  UNIT and submenu changes 20221225 JM.xlsx  UNIT and submenu changes 20221229 JM3.xlsx  UNIT and submenu changes 20221231 JM4.xlsx  UNIT and submenu changes.xlsx  WP43S key template.xlsx  XPORTP 2023-07-15a.txt  XPORTP 2023-07-16.txt  XPORTP 2023-07-17.txt  alternative_layouts_2023-03-05.xlsx  alternative_layouts_2023-03-05_rjvm.xlsx  constant_abbreviations-3.xlsx  constants_values_abbreviations_j.xlsx  items3.xlsx  items3_108_08s.xlsx  items3_108_08u.xlsx  items3_108_08v OLD with comments.xlsx  items3_108_08v.xlsx  items3_108_09a.xlsx  (+8 more)
src/testSuite/: addition_string.txt  expMOne.txt  lnGamma.txt  lnPOne.txt  logxy.txt  meson.build  multiplication_string.txt  power_longInteger.txt  power_shortInteger.txt  roundi.txt  sincpi.txt  slvq_real.txt  testSuite.c  testSuiteList.txt
src/testSuite/hal/: audio.c  gui.c  io.c
src/testSuite/tests/: 10pow.txt  2pow.txt  LERP.txt  LINPOL.txt  addition_complexMatrix.txt  addition_date.txt  addition_longInteger.txt  addition_realMatrix.txt  addition_string.txt  addition_time.txt  agm.txt  arccos.txt  arccosh.txt  arcsin.txt  arcsinh.txt  arctan.txt  arctanh.txt  argument.txt  atan2.txt  beta.txt  bn.txt  bn_star.txt  ceil.txt  changeSign.txt  chebyshev_t.txt  chebyshev_u.txt  conjugate.txt  (+121 more)
src/ttf2RasterFonts/: meson.build  testTtf2RasterFonts.c  ttf2RasterFonts.c
src/wp43/: assign.c  assign.h  bufferize.c  bufferize.h  calcMode.c  calcMode.h  charString.c  charString.h  config.c  config.h  constants.c  conversionAngles.c  conversionUnits.c  conversionUnits.h  curveFitting.c  curveFitting.h  dateTime.c  dateTime.h  debug.c  debug.h  defines.h  display.c  display.h  error.c  error.h  flags.c  flags.h  fonts.c  fonts.h  fractions.c  gui.c  gui.h  integers.c  items.c  items.h  keyboard.c  keyboard.h  matrix.c  matrix.h  memory.c  (+34 more)
src/wp43-dmcp/: main.h  meson.build  stm32_program.ld
src/wp43-dmcp/hal/: audio.c  io.c
src/wp43-gtk/: gtkGui.c  gtkGui.h  meson.build  wp43-gtk.c  wp43-gtk.h  wp43-gtk.rc
src/wp43-gtk/hal/: audio.c  gui.c  io.c
src/wp43s/: addons.c  assign.c  assign.h  bufferize.c  bufferize.h  charString.c  charString.h  config.c  config.h  constants.h  conversionAngles.c  conversionAngles.h  conversionUnits.c  conversionUnits.h  curveFitting.c  curveFitting.h  dateTime.c  dateTime.h  debug.c  debug.h  decNumberWrappers.h  defines.h  display.c  display.h  error.c  error.h  flags.c  fonts.h  fractions.c  fractions.h  gui.c  gui.h  integers.c  integers.h  items.c  items.h  jm.c  jm.h  jm_graph.c  keyboard.c  (+42 more)
src/wp43s-dmcp/: main.h
src/wp43s-gtk/: meson.build  wp43s-gtk.c
subprojects/: gmp-6.2.0.wrap
tools/: add_pgm_chsum  gen_qspi_crc  modify_crc  onARaspberry  rpiWithSharpMemoryDisplay
windows binaries/C43/: C43_changes_summary.txt  Readme.txt  buildnote.txt  c43.cmd.txt
windows binaries/C43_EMU_2020-11-08_Rel47/: Readme.txt  buildnote.txt
windows binaries/C43_EMU_2020-12-08_Rel48/: Readme.txt  buildnote.txt
(+549 files in other folders)
