option('CI_COMMIT_TAG',
  type        : 'string',
  value       : '',
  description : 'Commit tag for version information in a release')
option('RASPBERRY',
  type        : 'boolean',
  value       : false,
  description : 'Set if running on a RaspberryPi for a better layout')
option('RPIWSMD',
  type        : 'boolean',
  value       : false,
  description : 'Set if a Sharp Memory 400×240 Display is present (for Raspberry Pi)')
